@@ -101,13 +101,13 @@ persons are exported:
 [u'Address book - Export']
 >>> work_sheet_0 = xls_workbook.sheet_by_index(0)
 >>> (work_sheet_0.nrows, work_sheet_0.ncols)
-(4, 23)
+(4, 22)
 >>> for rx in range(work_sheet_0.nrows):
 ...     print work_sheet_0.row(rx)
-[text:u'person', empty:'', empty:'', empty:'', empty:'', empty:'', text:u'postal address', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', text:u'phone number', empty:'', empty:'', text:u'e-mail address', empty:'', empty:'', text:u'home page address', empty:'', empty:'']
-[text:u'first name', text:u'last name', text:u'birth date', text:u'sex', text:u'keywords', text:u'notes', text:u'kind', text:u'address prefix', text:u'street', text:u'city', text:u'zip', text:u'country', text:u'state', text:u'notes', text:u'kind', text:u'number', text:u'notes', text:u'kind', text:u'e-mail address', text:u'notes', text:u'kind', text:u'URL', text:u'notes']
-[empty:'', text:u'Koch', xldate:19017.0, text:u'male', text:u'family, church', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'']
-[empty:'', text:u'Liebig', empty:'', empty:'', text:u'church', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'']
+[text:u'person', empty:'', empty:'', empty:'', empty:'', empty:'', text:u'postal address', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', text:u'phone number', empty:'', empty:'', text:u'e-mail address', empty:'', empty:'', text:u'home page address', empty:'', empty:'']
+[text:u'first name', text:u'last name', text:u'birth date', text:u'sex', text:u'keywords', text:u'notes', text:u'kind', text:u'address prefix', text:u'street', text:u'city', text:u'zip', text:u'country', text:u'notes', text:u'kind', text:u'number', text:u'notes', text:u'kind', text:u'e-mail address', text:u'notes', text:u'kind', text:u'URL', text:u'notes']
+[empty:'', text:u'Koch', xldate:19017.0, text:u'male', text:u'family, church', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'']
+[empty:'', text:u'Liebig', empty:'', empty:'', text:u'church', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'']
 
 When the user chooses only some persons for export only these persons
 are exported:
@@ -118,12 +118,12 @@ are exported:
 >>> xls_workbook = xlrd.open_workbook(file_contents=browser.contents)
 >>> work_sheet_0 = xls_workbook.sheet_by_index(0)
 >>> (work_sheet_0.nrows, work_sheet_0.ncols)
-(3, 23)
+(3, 22)
 >>> for rx in range(work_sheet_0.nrows):
 ...     print work_sheet_0.row(rx)
-[text:u'person', empty:'', empty:'', empty:'', empty:'', empty:'', text:u'postal address', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', text:u'phone number', empty:'', empty:'', text:u'e-mail address', empty:'', empty:'', text:u'home page address', empty:'', empty:'']
-[text:u'first name', text:u'last name', text:u'birth date', text:u'sex', text:u'keywords', text:u'notes', text:u'kind', text:u'address prefix', text:u'street', text:u'city', text:u'zip', text:u'country', text:u'state', text:u'notes', text:u'kind', text:u'number', text:u'notes', text:u'kind', text:u'e-mail address', text:u'notes', text:u'kind', text:u'URL', text:u'notes']
-[empty:'', text:u'Liebig', empty:'', empty:'', text:u'church', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'']
+[text:u'person', empty:'', empty:'', empty:'', empty:'', empty:'', text:u'postal address', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', text:u'phone number', empty:'', empty:'', text:u'e-mail address', empty:'', empty:'', text:u'home page address', empty:'', empty:'']
+[text:u'first name', text:u'last name', text:u'birth date', text:u'sex', text:u'keywords', text:u'notes', text:u'kind', text:u'address prefix', text:u'street', text:u'city', text:u'zip', text:u'country', text:u'notes', text:u'kind', text:u'number', text:u'notes', text:u'kind', text:u'e-mail address', text:u'notes', text:u'kind', text:u'URL', text:u'notes']
+[empty:'', text:u'Liebig', empty:'', empty:'', text:u'church', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'', empty:'']
 
 When the user chooses no person for export a neary empty sheet gets
 exported. As all persons are selected by default, it is necessary to
